stateDiagram-v2
  prepared --> manual_check
  prepared --> ready_to_send
  ready_to_send --> manual_check
  ready_to_send --> sending
  sending --> accepted
  sending --> manual_check
  sending --> outcome_unknown
  sending --> rejected
  sending --> sent
  outcome_unknown --> accepted
  outcome_unknown --> executed
  outcome_unknown --> manual_check
  outcome_unknown --> rejected
  outcome_unknown --> returned
  sent --> accepted
  sent --> manual_check
  sent --> rejected
  accepted --> executed
  accepted --> manual_check
  accepted --> rejected
  accepted --> returned
  manual_check --> executed
  manual_check --> rejected
  manual_check --> returned
